@@ -360,6 +360,8 @@ struct ovn_datapath {
 
     /* router datapath has a logical port with redirect-type set to bridged. */
     bool redirect_bridged;
+    /* nbr has the option "dynamic-routing" set to true. */
+    bool dynamic_routing;
 
     struct ovn_port **localnet_ports;
     size_t n_localnet_ports;
@@ -707,7 +709,7 @@ struct parsed_route {
     const struct nbrec_logical_router_static_route *route;
     bool ecmp_symmetric_reply;
     bool is_discard_route;
-    const struct nbrec_logical_router *nbr;
+    const struct ovn_datapath *od;
     bool stale;
     struct sset ecmp_selection_fields;
     enum route_source source;
@@ -738,7 +740,7 @@ void northd_indices_create(struct northd_data *data,
 
 void route_policies_init(struct route_policies_data *);
 void route_policies_destroy(struct route_policies_data *);
-void build_parsed_routes(struct ovn_datapath *, const struct hmap *,
+void build_parsed_routes(const struct ovn_datapath *, const struct hmap *,
                          const struct hmap *, struct hmap *, struct simap *,
                          struct hmap *);
 uint32_t get_route_table_id(struct simap *, const char *);
